 + Add button in main menu at top left corner to open credits page
 + Restructure credits page
 + More intelligent automatic mission selection in campaign screen
 + New data directory for video thumbnails: Data/VideoThumbnails
 + Display a warning when the same key is used multiple times
 + Stats screen now hides empty sections
 + Visual notification when someone joins the room online
 + Various minor style tweaks
 * Fix broken handling of /watch chat command on official server
 * Fix renaming a video leading to loss of thumbnail after restart
 * Fix controls list failing to display correct key names with regards to keyboard layout
 * Fix force-locked schemes getting unlocked when changing map types
 * Fix possible to select background-only or hidden themes indirectly by changing map type
 * Disallow slash, backslash and colon characters in team and scheme names

Sounds and voicepacks:
 + sndYoohoo has been split to sndYoohoo and sndKiss
 + Voice files sndPoisonCough and sndPoisonMoan are now optional (fall back to Default voicepack)
 + Add taunt: sndFlyAway / Flyaway.ogg: When hedgehog flies off the map
 + Tweak some taunts: sndFirstBlood, sndLeaveMeAlone, sndCutItOut
 * Fix English voicepack selection of team being overwritten when playing in non-English locale

Theme customization
 + Make rope stylable by theme: Support for RopeNode.png and rope-step in theme.cfg

Lua API:
 + New call: SaveMissionVar(varname, value): Save value to mission variable (variable for non-campaign mission)
 + New call: GetMissionVar(varname): Get value of mission variable
 + New call: SetTurnTimePaused(isPaused): Call with true to pause turn time, false to unpause
 + New call: GetTurnTimePaused(): Returns true if turn time is paused due to Lua
 + New call: AddMissionTeam(color): Add mission team, i.e. the team selected by player in campaign/mission page
 + New call: AddMissionHog(health): Add a hedgehog for the mission team